fix header underline z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,7 @@
 .h-underline {
   position: relative;
   width: max-content;
+  z-index: 1;
 }
 .h-underline::after {
   content: '';
@@ -137,4 +138,5 @@
   width: 100%;
   height: 2px;
   background: #0087d6;
+  z-index: -1;
 }
